--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <body></body>
+  <body>
+    <div id="root"></div>
+  </body>
+
+  <!-- it's like the engine, allows us to have interactive UIs -->
   <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
+  <!-- React DOM is how we put React elements in the HTML -->
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
-  <script></script>
+
+  <script>
+    const root = document.getElementById("root");
+    const span = React.createElement("span", { id: "sexy-span", style: { color: "red" } }, "Hello I am a span");
+    ReactDOM.render(span, root);
+  </script>
 </html>
